--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\8.2rc\\tomcat90.properties
-j2ee.server.home=C:/apache-tomcat-9.0.45
-j2ee.server.instance=tomcat90:home=C:\\apache-tomcat-9.0.45
+deploy.ant.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.5\\tomcat80.properties
+j2ee.server.home=C:/xampp/tomcat
+j2ee.server.instance=tomcat80:home=C:\\xampp\\tomcat
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
