--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,7 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -39,8 +40,7 @@ j2ee.server.type=Tomcat
 jar.compress=true
 javac.classpath=\
     ${libs.jstl.classpath}:\
-    ${libs.eclipselink.classpath}:\
-    ${libs.MYSQLDRIVER.classpath}
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
