--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.5\\tomcat80.properties
-j2ee.server.home=C:/xampp/tomcat
-j2ee.server.instance=tomcat80:home=C:\\xampp\\tomcat
+deploy.ant.properties.file=C:\\Users\\gavin\\AppData\\Roaming\\NetBeans\\12.1\\tomcat90.properties
+j2ee.server.home=C:/Apache Tomcat/apache-tomcat-9.0.45
+j2ee.server.instance=tomcat90:home=C:\\Apache Tomcat\\apache-tomcat-9.0.45
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=C:\\Users\\gavin\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
