--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.5\\tomcat80.properties
-j2ee.server.home=C:/xampp/tomcat
-j2ee.server.instance=tomcat80:home=C:\\xampp\\tomcat
+deploy.ant.properties.file=C:\\Users\\Erika Jane\\AppData\\Roaming\\NetBeans\\12.1\\tomcat90.properties
+file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Erika Jane\\Downloads\\mysql-connector-java-8.0.25.jar
+j2ee.server.home=C:/apache-tomcat-9.0.50
+j2ee.server.instance=tomcat90:home=C:\\apache-tomcat-9.0.50
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=C:\\Users\\Erika Jane\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
