--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.5\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.0\\tomcat80.properties
+file.reference.mysql-connector-java-8.0.27.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.27.jar
 j2ee.server.home=C:/xampp/tomcat
 j2ee.server.instance=tomcat80:home=C:\\xampp\\tomcat
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
