--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /nbproject/private/
 build/
 dist/
+nbproject/private/private.properties
+nbproject/build-impl.xml
+nbproject/genfiles.properties
+nbproject/private/private.properties
+nbproject/project.properties
+nbproject/project.xml
